[project]
name = "tryon-gradio-app"
version = "0.1.0"
description = "A Gradio-based virtual try-on application using FASHN AI"
authors = [{ name = "octogen", email = "dev@octogen.io" }]
requires-python = ">=3.8"
dependencies = [
    "gradio",
    "numpy",
    "requests",
    "opencv-python",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."] 